--- a/src/templates/internacao/pendenciaInternacao.html
+++ b/src/templates/internacao/pendenciaInternacao.html
@@ -31,7 +31,8 @@
                         <i class="fa fa-plus fa-1-x kan-icon-success text-light p-0" data-toggle="tooltip" data-placement="bottom" title="Adicionar pendência de internação"></i>
                         Adicionar pendência
                     </button>
-                    <input id="search" class="form-control form-control-sm d-inline col-12 col-sm-6 col-md-5 col-lg-4 col-xl-4" type="text" ng-model="search" placeholder="Digite para pesquisar">
+                    <input id="search" class="form-control form-control-sm d-inline col-12 col-sm-6 col-md-5 col-lg-4 col-xl-4" type="text" ng-model="search"
+                        placeholder="Digite para pesquisar">
 
                 </div>
             </div>
@@ -44,8 +45,8 @@
                             <th class="text-center">Tipo</th>
                             <th class="text-center">Data Início</th>
                             <th class="text-center">Data Prevista Conclusão</th>
-                            <th class="text-center">Data de Conclusão</th>
                             <th class="text-center">Observações</th>
+                            <th class="text-center">Data de Conclusão</th>
                             <th class="text-center">Ações</th>
                         </tr>
                     </thead>
@@ -54,7 +55,7 @@
                             <td class="text-center">
                                 <span ng-show="!pendencia.edicao" title="{{pendencia.tipoPendencia.nome}}">{{pendencia.tipoPendencia.nome}}</span>
                                 <select ng-show="pendencia.edicao" ng-model="pendencia.tipoPendencia" class="form-control form-control-sm" ng-options="tipo.nome for tipo in tiposPendencias track by tipo.idPendencia">
-                                <option value="">Selecione</option>
+                                    <option value="">Selecione</option>
                                 </select>
                             </td>
                             <td class="text-center">
@@ -65,13 +66,13 @@
                                 <span ng-show="!pendencia.edicao" title="{{pendencia.previsaoConclusao | date: 'dd/MM/yy'}}">{{pendencia.previsaoConclusao | date: 'dd/MM/yy'}}</span>
                                 <input ng-show="pendencia.edicao" type="date" ng-model="pendencia.previsaoConclusao" class="form-control form-control-sm">
                             </td>
-                            <td class="text-center">
-                                <span ng-show="!pendencia.edicao" title="{{pendencia.dataConclusao | date: 'dd/MM/yy'}}">{{pendencia.dataConclusao | date: 'dd/MM/yy'}}</span>
-                                <input ng-show="pendencia.edicao" type="date" ng-model="pendencia.dataConclusao" class="form-control form-control-sm">
-                            </td>
                             <td>
                                 <span ng-show="!pendencia.edicao" title="{{pendencia.observacao}}">{{pendencia.observacao}}</span>
                                 <textarea ng-show="pendencia.edicao" ng-model="pendencia.observacao" class="form-control form-control-sm"></textarea>
+                            </td>
+                            <td class="text-center">
+                                <span ng-show="!pendencia.edicao" title="{{pendencia.dataConclusao | date: 'dd/MM/yy'}}">{{pendencia.dataConclusao | date: 'dd/MM/yy'}}</span>
+                                <input ng-show="pendencia.edicao" type="date" ng-model="pendencia.dataConclusao" class="form-control form-control-sm">
                             </td>
                             <td class="text-center">
                                 <button class="btn-icon" ng-disabled="pendencia.edicao" ng-click="editarPendenciaInternacao(pendencia)">
