--- a/src/templates/cadastros-gerais/alas.html
+++ b/src/templates/cadastros-gerais/alas.html
@@ -12,7 +12,7 @@
         <fieldset class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
                 <h5 class="kan-title">Alas Cadastradas
-                    <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Aqui você visualizará as alas já cadastrados no sistema e poderá adicionar ou editá-las.">
+                    <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Aqui você visualizará as alas já cadastrados no sistema e poderá ativar e inativar.">
                     </i>
                 </h5>
                 <div class="col-lg-12 kan-group">
@@ -41,20 +41,20 @@
                     <thead>
                         <tr>
                             <th class="text-center">Nome Ala</th>
-                            <th class="text-center">Inativo</th>
+                            <th class="text-center">Inativa</th>
                             <th class="text-center">Ações</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="ala in listaAlas  | filter : search | orderBy: 'nome'">
-                            <td class="text-capitalize" title="{{ala.nome}}">{{ala.nome}}</td>
+                        <tr ng-repeat="ala in listaAlas  | filter : search | orderBy: 'nomeAla'">
+                            <td class="text-capitalize" title="{{ala.nomeAla}}">{{ala.nomeAla}}</td>
                             <td class="text-center">
-                                <span ng-show="ala.inativo">Sim</span>
-                                <span ng-show="!ala.inativo">Não</span>
+                                <span ng-show="ala.inativa">Sim</span>
+                                <span ng-show="!ala.inativa">Não</span>
                             </td>
                             <td class="text-center">
-                                <i ng-show="!ala.inativo" class="fa fa-ban text-danger" aria-hidden="true" title="Inativar ala" ng-click="alterarStatus(ala, 'inativar')"></i>
-                                <i ng-show="ala.inativo" class="fa fa-check text-success" aria-hidden="true" title="Ativar ala" ng-click="alterarStatus(ala, 'ativar')"></i>
+                                <i ng-show="!ala.inativa" class="fa fa-ban text-danger" aria-hidden="true" title="Inativar ala" ng-click="alterarStatus(ala, 'inativar')"></i>
+                                <i ng-show="ala.inativa" class="fa fa-check text-success" aria-hidden="true" title="Ativar ala" ng-click="alterarStatus(ala, 'ativar')"></i>
                             </td>
                         </tr>
                     </tbody>
