--- a/src/templates/cadastros-gerais/enfermarias.html
+++ b/src/templates/cadastros-gerais/enfermarias.html
@@ -12,7 +12,7 @@
         <fieldset class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
                 <h5 class="kan-title">Enfermarias Cadastradas
-                    <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Aqui você visualizará as enfermarias já cadastrados no sistema e poderá adicionar ou editá-las.">
+                    <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Aqui você visualizará as enfermarias já cadastrados no sistema e poderá ativá-las ou inativá-las.">
                     </i>
                 </h5>
                 <div class="col-lg-12 kan-group">
@@ -40,25 +40,25 @@
                 <table class="table table-bordered table-hover table-sm">
                     <thead>
                         <tr>
-                            <th class="text-center">Ala</th>
+                            <th class="text-center">Nome da Ala</th>
                             <th class="text-center">Nome Enfermaria</th>
-                            <th class="text-center">Gênero</th>
-                            <th class="text-center">Inativo</th>
+                            <th class="text-center">Gênero da Enfermaria</th>
+                            <th class="text-center">Inativa</th>
                             <th class="text-center">Ações</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="ala in listaAlas  | filter : search | orderBy: 'nome'">
-                            <td class="text-capitalize" title="{{ala.nome}}">{{ala.nome}}</td>
-                            <td class="text-capitalize" title="{{enfermaria.nome}}">{{enfermaria.nome}}</td>
-                            <td class="text-capitalize" title="{{genero.nome}}">{{genero.nome}}</td>
+                        <tr ng-repeat="enfermaria in listaEnfermarias  | filter : search | orderBy: 'nomeAla'">
+                            <td class="text-capitalize" title="{{enfermaria.ala.nomeAla}}">{{enfermaria.ala.nomeAla}}</td>
+                            <td class="text-capitalize" title="{{enfermaria.nomeEnfermaria}}">{{enfermaria.nomeEnfermaria}}</td>
+                            <td class="text-capitalize" title="{{enfermaria.genero}}">{{enfermaria.genero}}</td>
                             <td class="text-center">
-                                <span ng-show="ala.inativo">Sim</span>
-                                <span ng-show="!ala.inativo">Não</span>
+                                <span ng-show="enfermaria.inativa">Sim</span>
+                                <span ng-show="!enfermaria.inativa">Não</span>
                             </td>
                             <td class="text-center">
-                                <i ng-show="!ala.inativo" class="fa fa-ban text-danger" aria-hidden="true" title="Inativar ala" ng-click="alterarStatus(ala, 'inativar')"></i>
-                                <i ng-show="ala.inativo" class="fa fa-check text-success" aria-hidden="true" title="Ativar ala" ng-click="alterarStatus(ala, 'ativar')"></i>
+                                <i ng-show="!enfermaria.inativa" class="fa fa-ban text-danger" aria-hidden="true" title="Inativar enfermaria" ng-click="confirmarAlteracaoStatus(enfermaria, 'inativar')"></i>
+                                <i ng-show="enfermaria.inativa" class="fa fa-check text-success" aria-hidden="true" title="Ativar enfermaria" ng-click="confirmarAlteracaoStatus(enfermaria, 'ativar')"></i>
                             </td>
                         </tr>
                     </tbody>
