--- a/src/templates/cadastros-gerais/cadastroTipoExame.html
+++ b/src/templates/cadastros-gerais/cadastroTipoExame.html
@@ -1,4 +1,4 @@
-<div ng-controller="CadastroExameController">
+<div ng-controller="CadastroTipoExameController">
     <div class="kan-row-modal">
         <!-- PACIENTE -->
         <fieldset class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
@@ -9,13 +9,13 @@
                 <label>Nome do Tipo de Exame
                     <b class="text-danger">*</b>
                 </label>
-                <input class="form-control form-control-sm" type="text" placeholder="Informe o nome do tipo de exame" ng-model="exame.nome">
+                <input class="form-control form-control-sm" type="text" placeholder="Informe o nome do tipo de exame" ng-model="tipoExame.nome">
             </div>
 
         </fieldset>
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 button-kan-row">
             <button type="button" class="btn kan-btn-danger" ng-click="closeThisDialog(false)">Cancelar</button>
-            <button type="button" class="btn kan-btn-success" ng-click="exame.atualizar ? updateExame() : cadastrarExame()">Salvar Exame</button>
+            <button type="button" class="btn kan-btn-success" ng-click="tipoExame.atualizar ? updateTipoExame() : cadastrarTipoExame()">Salvar Tipo de Exame</button>
         </div>
     </div>
 </div>
