Corrigido motivos de evasao na finalização da internação

--- a/src/templates/internacao/finalizacaoInternacao.html
+++ b/src/templates/internacao/finalizacaoInternacao.html
@@ -102,10 +102,10 @@
             </label>
             <select ng-model="vm.finalizacaoInternacao.motivoEvasao" ng-change="vm.carregarHospitais()" class="form-control form-control-sm">
                 <option value="">Selecione o motivo da evasão</option>
-                <option value="Alta">Alta</option>
-                <option value="Óbito">Óbito</option>
+                <option value="ALTA">Alta</option>
+                <option value="OBITO">Óbito</option>
                 <option value="PAD">PAD</option>
-                <option value="Transferência">Transferência Hospitalar</option>
+                <option value="TRANSFERENCIA">Transferência Hospitalar</option>
             </select>
         </div>
 
