Criado tela dashboard e adicionado no menu lateral

--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -76,6 +76,13 @@
                 </div>
             </li>
 
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
+                <a class="nav-link" ui-sref="dashboard">
+                    <img src="img/chart.png" alt="">
+                    <span class="nav-link-text">Dashboard</span>
+                </a>
+            </li>
+
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Reltório de Leitos">
                 <a class="nav-link" ui-sref="leitos">
                     <img src="img/leito.png" alt="">
@@ -107,12 +114,12 @@
                             </a>
                         </li>
                         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Enfermarias">
-                                <a class="nav-link" ui-sref="enfermarias">
-                                    <span class="nav-link-text">
-                                        Enfermarias
-                                    </span>
-                                </a>
-                            </li>
+                            <a class="nav-link" ui-sref="enfermarias">
+                                <span class="nav-link-text">
+                                    Enfermarias
+                                </span>
+                            </a>
+                        </li>
                         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Exames">
                             <a class="nav-link" ui-sref="tiposExames">
                                 <span class="nav-link-text">
